# nini

./: README.md
newsroom/: .gitignore  CLAUDE.md  README.md
newsroom/backend/: .env.example  pyproject.toml
newsroom/backend/app/: database.py  main.py  models.py  orchestrator.py  scenarios.py  schemas.py
newsroom/backend/app/agents/: __init__.py  director.py  guest.py  guest_state.py  judge.py  writer.py
newsroom/backend/app/llm/: __init__.py  config.py  exceptions.py  gateway.py
newsroom/backend/app/memory/: __init__.py  profile.py
newsroom/backend/app/prompts/: director.md  guest.md  guest_assess.md  guest_stream.md  json-schema-output.md  judge.md  schema-retry.md  writer.md  writer_critic.md
newsroom/backend/app/prompts/personas/: chatty_writer.md  spin_ceo.md  terse_scientist.md  wary_witness.md
newsroom/backend/app/speech/: __init__.py  router.py  transcriber.py
newsroom/backend/app/tools/: __init__.py  search.py  stenographer.py  stenographer_config.py
newsroom/backend/app/tools/fixtures/: search_results.json
newsroom/backend/tests/: test_director.py  test_gateway.py  test_guest.py  test_judge.py  test_orchestrator.py  test_profile.py  test_scenarios.py  test_search.py  test_speech.py  test_stenographer.py  test_writer.py
newsroom/deliverables/: 智能体结课作业报告_Newsroom_Interview_Lab.docx  智能体结课作业报告_Newsroom_Interview_Lab_终稿.docx
newsroom/docs/: README.md  memory-design.md  prompt-changelog.md  sequence.md  speech-design.md
newsroom/docs/seed/: dossier_demo.json
newsroom/frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+12 files in other folders)
